static/allauth/css/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
:root {
    --clr--slate-300: oklch(92.9% 0.013 255.508);
    --clr--slate-400: oklch(0.869 0.022 252.894);

    --clr--slate-950: oklch(12.9% 0.042 264.695);
    --clr--slate-900: oklch(20.8% 0.042 265.755);
    --clr--blue-300: oklch(80.9% 0.105 251.813);
    --clr--violet-700: oklch(49.1% 0.27 292.581);
    --clr--blue-700:oklch(48.8% 0.243 264.376);
}

body {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    display: grid;
    padding: 2rem;
    min-height: 100vh;
    place-content: center;
    background-color: var(--clr--blue-300);
    color: var(--clr--slate-900);
} 

main {
    padding: 2rem;
    border-radius: 0.5rem;
    background-color: var(--clr--slate-300);
    max-width: 36rem;
    /* https://getcssscan.com/css-box-shadow-examples n 15 */
    box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
}

h1 {
    font-size: 2rem;
    text-align: center;
    margin-bottom: 0.75rem;
}

h2 {
    font-size: 1.25rem;
    text-align: center;
    margin-block: 0.5rem;
}

form {
    display: flex;
    flex-direction: column;
    margin-block: 1.5rem;  
}

form p {
    margin-bottom: 0.5rem;
} 

form p label {
    display: block;
    margin-bottom: 0.25rem;
}

form p input,
.input-text__container input {
    border: 1px solid var(--clr--slate-900);
    width: 100%;
    padding: 0.65rem 0.75rem;
    border-radius: 0.35rem;
}

form p:has(input[type=checkbox]) {
    width: fit-content;
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

form p:has(input[type=checkbox]) label {
    flex-grow: 1;
    flex-shrink: 0;
} 

form .helptext {
    display: block;
    margin-block: 0.75rem;
    font-style:italic;
}

form button {
    cursor: pointer;
    opacity: 0.9;
    padding: 0.65rem 0.75rem;
    font-size: 1rem;
    color: var(--clr--slate-300);
    border-radius: 0.35rem;
    border: 0px;
    text-transform: capitalize;
    background: linear-gradient(45deg, var(--clr--violet-700), var(--clr--blue-700)) ;
    transition: opacity 0.2s;
}

form button:hover {
    opacity: 1;
}

.custom-password-input-container {
    display: flex;
    gap: 0.5rem;
}

/* .custom-password-input-container svg.pasword-hidden,
.custom-password-input-container svg.pasword-showed
 {
} */

.custom-password-input-container:has(input[type=password]) button svg.pasword-hidden {
    display: block;
    width: 0.5rem;
}

.custom-password-input-container:has(input[type=password]) button svg.pasword-showed {
    display: none;
}

/* .custom-password-input-container:has(input[type=text]) button svg.pasword-hidden {
    display: none;
}

.custom-password-input-container:has(input[type=text]) button svg.pasword-showed {
    display: none;
} */

.link-go-home {
    text-decoration: none;
    margin-bottom: 1rem;
    padding: 0.75rem;
    background-color: var(--clr--slate-300);
    border-radius: 0.5rem;
    color: var(--clr--slate-950);

    display: flex;
    gap: 1rem;
    align-items: center;
    transition: 0.25s ease-in background-color;
}

.link-go-home:hover {
    background-color: var(--clr--slate-400);
}

.link-go-home .icon {


    width: 3.25rem;
    aspect-ratio: 1;
    border-radius: 100%;
}

ul:has(li a[title=GitHub]),
l:has(li a[title=Google]) {
    list-style: none;
}

a[title=GitHub],
a[title=Google]
{
    color: transparent;
    position: relative;
    text-align: center;
    display: block;
    margin-top: 0.75rem;
    border-radius: 0.45rem;
    padding: 0.3rem 1rem;
    width: 100%;
    outline: black solid 1px;
    border: solid black 5px;
}

a[title=GitHub],
a[title=GitHub]:hover
 {
    background-color: black;
}

a[title=Google] {
    outline: red solid 1px;
    border-color:white;
    background-color: white;
}

a[title=GitHub]::before,
a[title=Google]::before,
a[title=GitHub]::after,
a[title=Google]::after {
    content: "";
    position: absolute;
    width: 100%;
    inset: 0;
    margin: auto;
    display: grid;
    place-content: center;
}

a[title=GitHub]::before,
a[title=Google]::before {
    transform: translateX(-2rem);
}

a[title=GitHub]::after,
a[title=Google]::after {
    transform: translateX(1rem);
    font-size: 1rem;
    font-weight: 600;
}

a[title=GitHub]::after {
    content: "Github";
    color: white;
}

a[title=Google]::after {
    content: "Google";
    color: red;
}

a[title=GitHub]::before {
    background: url('/static/icons/github.svg') no-repeat center / contain;

}
a[title=Google]::before {
    background: url('/static/icons/google.svg') no-repeat center / contain;
}

